[FIX] User Card image not showing

--- a/src/frontend/components/UserCard/UserCard.css
+++ b/src/frontend/components/UserCard/UserCard.css
@@ -10,7 +10,7 @@
 
 .user-card img {
 	height: 100%;
-	max-inline-size: initial;
+	max-inline-size: fit-content;
 }
 
 .user-follow {
